--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "~4.2.0",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
+    "angular": "^1.5.0",
     "body-parser": "~1.0.0",
+    "bower": "^1.7.7",
+    "connect-mongo": "^1.1.0",
+    "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
-    "jade": "~1.3.0"
+    "ejs": "^2.4.1",
+    "ejs-locals": "^1.0.2",
+    "express": "~4.2.0",
+    "express-session": "^1.13.0",
+    "jade": "~1.3.0",
+    "mongoose": "^4.4.2",
+    "morgan": "^1.0.1",
+    "static-favicon": "~1.0.0"
   }
 }
